--- a/CustomRPC/Strings.ko.resx
+++ b/CustomRPC/Strings.ko.resx
@@ -178,4 +178,7 @@
   <data name="errorLoadingAssembly" xml:space="preserve">
     <value>"{0}" 경로를 백신 탐지 예외로 추가해주세요. 오류가 지속되면 CustomRP를 재설치 하십시오.</value>
   </data>
+  <data name="errorInvalidImageURL" xml:space="preserve">
+    <value>이미지 URL이 너무 깁니다!</value>
+  </data>
 </root>
