--- a/CustomRPC/Strings.ar.resx
+++ b/CustomRPC/Strings.ar.resx
@@ -178,4 +178,7 @@
   <data name="errorLoadingAssembly" xml:space="preserve">
     <value>الرجاء إضافة مسار "{0}" إلى برنامج مكافحة الفيروسات. أعد تثبيت CustomRP إذا استمر هذا الخطأ.</value>
   </data>
+  <data name="errorInvalidImageURL" xml:space="preserve">
+    <value>رابط الصورة طويل للغاية!</value>
+  </data>
 </root>
