--- a/CustomRPC/Strings.ja.resx
+++ b/CustomRPC/Strings.ja.resx
@@ -178,4 +178,7 @@
   <data name="errorLoadingAssembly" xml:space="preserve">
     <value>ウイルス対策ソフトの除外設定に"{0}"を追加してください。このエラーが続くようであれば、CustomRPを再インストールしてください。</value>
   </data>
+  <data name="errorInvalidImageURL" xml:space="preserve">
+    <value>画像のURLが長すぎます！</value>
+  </data>
 </root>
