--- a/CustomRPC/About.fi.resx
+++ b/CustomRPC/About.fi.resx
@@ -128,6 +128,6 @@
     <value>Sulje</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
-    <value>Tietoa</value>
+    <value>Tietoja</value>
   </data>
 </root>
