--- a/CustomRPC/ErrorReportViewer.fi.resx
+++ b/CustomRPC/ErrorReportViewer.fi.resx
@@ -133,4 +133,7 @@
   <data name="$this.Text" xml:space="preserve">
     <value>Virhe Raportti</value>
   </data>
+  <data name="buttonOK.Text" xml:space="preserve">
+    <value>OK</value>
+  </data>
 </root>
