--- a/CustomRPC/Strings.fi.resx
+++ b/CustomRPC/Strings.fi.resx
@@ -144,7 +144,7 @@ Voit avata sen milloin tahansa siirtymällä kohtaan Ohje -&gt; Avaa käyttöohj
     <value>Yhdistetään...</value>
   </data>
   <data name="statusConnectionFailed" xml:space="preserve">
-    <value>Yhteys epäonnistui (Onko Discord käynnissä?)</value>
+    <value>Yhteys epäonnistui (Tarkista onko Discord käynnissä?)</value>
   </data>
   <data name="statusDisconnected" xml:space="preserve">
     <value>Yhteys Katkaistu</value>
@@ -156,7 +156,7 @@ Voit avata sen milloin tahansa siirtymällä kohtaan Ohje -&gt; Avaa käyttöohj
     <value>Virheellinen URL-osoite painikkeille tai teksti on liian pitkä!</value>
   </data>
   <data name="errorNoInternet" xml:space="preserve">
-    <value>Ei pysty yhdistämään Internetiin!</value>
+    <value>Ei pystynyt yhdistämään Internetiin!</value>
   </data>
   <data name="noUpdatesFound" xml:space="preserve">
     <value>Päivityksiä ei löytynyt!</value>
